服务端修改

--- a/Server/WCFServer/LocationWCF/App.config
+++ b/Server/WCFServer/LocationWCF/App.config
@@ -31,6 +31,9 @@
     <add key="ClientSettingsProvider.ServiceUri" value="" />
     <add key="VersionCode" value="1.0.21"/>
     <add key="LocationPackageURL" value="http://192.168.1.21:8013/Setup/LocationSystem.exe"/>
+    <!-- 测试：192.168.1.21:8013 现场：172.16.100.26 -->
+    <add key="DatacaseWebApiUrl" value="ipms-demo.datacase.io"/> 
+    <!-- 测试：ipms-demo.datacase.io 现场：172.16.100.22 -->
   </appSettings>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebLocation-20180528021530.mdf;Initial Catalog=aspnet-WebLocation-20180528021530;Integrated Security=True" providerName="System.Data.SqlClient" />
