--- a/Server/WCFServer/LocationWCF/App.config
+++ b/Server/WCFServer/LocationWCF/App.config
@@ -11,8 +11,8 @@
   <appSettings>
     <add key="DataInitMode" value="-1" />
     <!--数据初始化方式 -1:不初始化,0:EF,1:Sql-->
-    <add key="DbSource" value="0" />
-    <!--数据库来源 0:SqlServer 1:Sqlite-->
+    <add key="DbSourceType" value="MySql" />
+    <!--数据库来源 0:SqlServer 1:SQLite 2:MySql-->
     <add key="ShowSqlLog" value="0" />
     <!--显示数据库语句 0:不显示 1:显示-->
     <add key="AutoStartServer" value="0" />
@@ -29,23 +29,20 @@
     <add key="Password" value="admin" />
     <add key="PositionMoveStateWaitTime" value="4.0" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
-    <add key="VersionCode" value="1.0.21"/>
-    <add key="LocationPackageURL" value="http://192.168.1.21:8013/Setup/LocationSystem.exe"/>
-    <!-- 测试：192.168.1.21:8013 现场：172.16.100.26 -->
-    <add key="DatacaseWebApiUrl" value="ipms-demo.datacase.io"/> 
-    <!-- 测试：ipms-demo.datacase.io 现场：172.16.100.22 -->
+    <add key="VersionCode" value="1.0.21" />
+    <add key="LocationPackageURL" value="http://192.168.1.21:8013/Setup/LocationSystem.exe" />
   </appSettings>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebLocation-20180528021530.mdf;Initial Catalog=aspnet-WebLocation-20180528021530;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <!--<add name="LocationConnection" connectionString="Server=127.0.0.1,1433;Database=Location;Persist Security Info = true;User ID = sa;Password = 123456;" providerName="System.Data.SqlClient" />
-    <add name="LocationHistoryConnection" connectionString="Server=127.0.0.1,1433;Database=LocationHistory;Persist Security Info = true;User ID = sa;Password = 123456;" providerName="System.Data.SqlClient" />
-    <add name="topviewxpConnection" connectionString="Server=127.0.0.1,1433;Database=topviewxp;Persist Security Info = true;User ID = sa;Password = 123456;" providerName="System.Data.SqlClient" />-->
-    <add name="LocationConnection" connectionString="Data Source=localhost;port=3306;Initial Catalog=Location;user id=root;password=123456;charset=utf8;" providerName="MySql.Data.MySqlClient" />
-    <add name="LocationHistoryConnection" connectionString="Data Source=localhost;port=3306;Initial Catalog=LocationHistory;user id=root;password=123456;charset=utf8;" providerName="MySql.Data.MySqlClient" />
-    <add name="topviewxpConnection" connectionString="Data Source=localhost;port=3306;Initial Catalog=topviewxp;user id=root;password=123456;charset=utf8;" providerName="MySql.Data.MySqlClient" />
+    <!--<add name="topviewxp_SqlServer" connectionString="Server=127.0.0.1,1433;Database=topviewxp;Persist Security Info = true;User ID = sa;Password = 123456;" providerName="System.Data.SqlClient" />-->
+    <add name="Location_SqlServer" connectionString="Server=127.0.0.1,1433;Database=Location;Persist Security Info = true;User ID = sa;Password = 123456;" providerName="System.Data.SqlClient" />
+    <add name="LocationHistory_SqlServer" connectionString="Server=127.0.0.1,1433;Database=LocationHistory;Persist Security Info = true;User ID = sa;Password = 123456;" providerName="System.Data.SqlClient" />
+    <add name="Location_MySql" connectionString="Data Source=localhost;port=3306;Initial Catalog=Location;user id=root;password=123456;charset=utf8;" providerName="MySql.Data.MySqlClient" />
+    <add name="LocationHistory_MySql" connectionString="Data Source=localhost;port=3306;Initial Catalog=LocationHistory;user id=root;password=123456;charset=utf8;" providerName="MySql.Data.MySqlClient" />
+    <!--<add name="topviewxp_MySql" connectionString="Data Source=localhost;port=3306;Initial Catalog=topviewxp;user id=root;password=123456;charset=utf8;" providerName="MySql.Data.MySqlClient" />-->
     <add name="EngineLite" connectionString="Data Source=Data\engine.db" providerName="System.Data.SQLite.EF6" />
-    <add name="LocationLite" connectionString="Data Source=Data\location.db" providerName="System.Data.SQLite.EF6" />
-    <add name="LocationHisLite" connectionString="Data Source=Data\locationHis.db" providerName="System.Data.SQLite.EF6" />
+    <add name="Location_SQLite" connectionString="Data Source=Data\location.db" providerName="System.Data.SQLite.EF6" />
+    <add name="LocationHistory_SQLite" connectionString="Data Source=Data\locationHis.db" providerName="System.Data.SQLite.EF6" />
   </connectionStrings>
   <system.serviceModel>
     <bindings>
@@ -103,7 +100,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
       <provider invariantName="System.Data.SQLite.EF6" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
       <provider invariantName="System.Data.SQLite" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
-    </providers>
+    <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.9.12.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"></provider></providers>
   </entityFramework>
   <log4net>
     <!-- OFF, FATAL, ERROR, WARN, INFO, DEBUG, ALL -->
@@ -118,6 +115,7 @@
     <appender name="SysAppender" type="log4net.Appender.RollingFileAppender,log4net">
       <param name="File" value="Logs/" />
       <!--文件存放位置D:/App_Data，默认输出目录-->
+      <param name="Encoding" value="utf-8" />
       <param name="AppendToFile" value="true" />
       <param name="RollingStyle" value="Date" />
       <param name="DatePattern" value="&quot;Logs_&quot;yyyyMMdd&quot;.txt&quot;" />
@@ -180,7 +178,7 @@
       <add name="SQLite Data Provider (Entity Framework 6)" invariant="System.Data.SQLite.EF6" description=".NET Framework Data Provider for SQLite (Entity Framework 6)" type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6" />
       <remove invariant="System.Data.SQLite" />
       <add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" />
-    </DbProviderFactories>
+    <remove invariant="MySql.Data.MySqlClient" /><add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.12.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" /></DbProviderFactories>
   </system.data>
   <system.web>
     <membership defaultProvider="ClientAuthenticationMembershipProvider">
