--- a/Server/WCFServer/LocationWCF/packages.config
+++ b/Server/WCFServer/LocationWCF/packages.config
@@ -22,6 +22,8 @@
   <package id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Hosting" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net45" />
+  <package id="MySql.Data" version="6.9.12" targetFramework="net45" />
+  <package id="MySql.Data.Entity" version="6.9.12" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="SQLite.CodeFirst" version="1.5.1.25" targetFramework="net45" />
