--- a/Server/WebSite/LocationWeb/Location.WebSite.csproj
+++ b/Server/WebSite/LocationWeb/Location.WebSite.csproj
@@ -175,6 +175,14 @@
       <HintPath>..\..\..\packages\Microsoft.Owin.Security.Twitter.3.0.1\lib\net45\Microsoft.Owin.Security.Twitter.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="MySql.Data, Version=6.9.12.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\MySql.Data.6.9.12\lib\net45\MySql.Data.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="MySql.Data.Entity.EF6, Version=6.9.12.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\MySql.Data.Entity.6.9.12\lib\net45\MySql.Data.Entity.EF6.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -318,6 +326,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\AreaAuthorizationController.cs" />
     <Compile Include="Controllers\ImagesController.cs" />
+    <Compile Include="Controllers\InspectionTrackController.cs" />
     <Compile Include="Controllers\KKSCodeController.cs" />
     <Compile Include="Controllers\LocationCardController.cs" />
     <Compile Include="Controllers\LocationCardPositionController.cs" />
@@ -658,6 +667,16 @@
     <Content Include="Views\DevInfo\Create.cshtml" />
     <Content Include="Views\DevInfo\Details.cshtml" />
     <Content Include="Views\DevInfo\Delete.cshtml" />
+    <Content Include="Views\InspectionTrack\Index.cshtml" />
+    <Content Include="Views\InspectionTrack\Create.cshtml" />
+    <Content Include="Views\InspectionTrack\Edit.cshtml" />
+    <Content Include="Views\InspectionTrack\Details.cshtml" />
+    <Content Include="Views\InspectionTrack\CreatePoint.cshtml" />
+    <Content Include="Views\InspectionTrack\EditPoint.cshtml" />
+    <Content Include="Views\InspectionTrack\CreateItem.cshtml" />
+    <Content Include="Views\InspectionTrack\EditItem.cshtml" />
+    <Content Include="Views\InspectionTrack\Clock.cshtml" />
+    <Content Include="Views\InspectionTrack\ItemDetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
