--- a/Server/WebSite/LocationWeb/Web.config
+++ b/Server/WebSite/LocationWeb/Web.config
@@ -59,15 +59,15 @@
   
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebLocation-20180528021530.mdf;Initial Catalog=aspnet-WebLocation-20180528021530;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <!--<add name="LocationConnection" connectionString="Server=127.0.0.1,1433;Database=Location;Persist Security Info = true;User ID = sa;Password = 123456;" providerName="System.Data.SqlClient" />
-    <add name="LocationHistoryConnection" connectionString="Server=127.0.0.1,1433;Database=LocationHistory;Persist Security Info = true;User ID = sa;Password = 123456;" providerName="System.Data.SqlClient" />
-    <add name="topviewxpConnection" connectionString="Server=127.0.0.1,1433;Database=topviewxp;Persist Security Info = true;User ID = sa;Password = 123456;" providerName="System.Data.SqlClient" />-->
-    <add name="LocationConnection" connectionString="Data Source=localhost;port=3306;Initial Catalog=Location;user id=root;password=123456;charset=utf8;" providerName="MySql.Data.MySqlClient" />
-    <add name="LocationHistoryConnection" connectionString="Data Source=localhost;port=3306;Initial Catalog=LocationHistory;user id=root;password=123456;charset=utf8;" providerName="MySql.Data.MySqlClient" />
-    <add name="topviewxpConnection" connectionString="Data Source=localhost;port=3306;Initial Catalog=topviewxp;user id=root;password=123456;charset=utf8;" providerName="MySql.Data.MySqlClient" />
-  </connectionStrings>
-  
-  
+    <!--<add name="topviewxp_SqlServer" connectionString="Server=127.0.0.1,1433;Database=topviewxp;Persist Security Info = true;User ID = sa;Password = 123456;" providerName="System.Data.SqlClient" />-->
+    <add name="Location_SqlServer" connectionString="Server=127.0.0.1,1433;Database=Location;Persist Security Info = true;User ID = sa;Password = 123456;" providerName="System.Data.SqlClient" />
+    <add name="LocationHistory_SqlServer" connectionString="Server=127.0.0.1,1433;Database=LocationHistory;Persist Security Info = true;User ID = sa;Password = 123456;" providerName="System.Data.SqlClient" />
+    <add name="Location_MySql" connectionString="Data Source=localhost;port=3306;Initial Catalog=Location;user id=root;password=123456;charset=utf8;" providerName="MySql.Data.MySqlClient" />
+    <add name="LocationHistory_MySql" connectionString="Data Source=localhost;port=3306;Initial Catalog=LocationHistory;user id=root;password=123456;charset=utf8;" providerName="MySql.Data.MySqlClient" />
+    <!--<add name="topviewxp_MySql" connectionString="Data Source=localhost;port=3306;Initial Catalog=topviewxp;user id=root;password=123456;charset=utf8;" providerName="MySql.Data.MySqlClient" />-->
+    <add name="EngineLite" connectionString="Data Source=Data\engine.db" providerName="System.Data.SQLite.EF6" />
+    <add name="Location_SQLite" connectionString="Data Source=Data\location.db" providerName="System.Data.SQLite.EF6" />
+    <add name="LocationHistory_SQLite" connectionString="Data Source=Data\locationHis.db" providerName="System.Data.SQLite.EF6" />  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -185,7 +185,7 @@
     </defaultConnectionFactory>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    </providers>
+    <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.9.12.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"></provider></providers>
   </entityFramework>
   <system.serviceModel>
     <behaviors>
@@ -204,4 +204,14 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <system.data>
+    <DbProviderFactories>
+      <remove invariant="System.Data.SQLite.EF6" />
+      <add name="SQLite Data Provider (Entity Framework 6)" invariant="System.Data.SQLite.EF6" description=".NET Framework Data Provider for SQLite (Entity Framework 6)" type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6" />
+      <remove invariant="System.Data.SQLite" />
+      <add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" />
+      <remove invariant="MySql.Data.MySqlClient" />
+      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.12.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+    </DbProviderFactories>
+  </system.data>
 </configuration>
