--- a/Server/WCFServer/LocationWCF/App.config
+++ b/Server/WCFServer/LocationWCF/App.config
@@ -29,8 +29,11 @@
     <add key="Password" value="admin" />
     <add key="PositionMoveStateWaitTime" value="4.0" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
-    <add key="VersionCode" value="1.0.21" />
+    <add key="VersionCode" value="1.0.20" />
     <add key="LocationPackageURL" value="http://192.168.1.21:8013/Setup/LocationSystem.exe" />
+    <add key="MaxConcurrentCalls" value="1000"/>
+    <add key="MaxConcurrentSessions" value="1000"/>
+    <add key="MaxConcurrentInstances" value="1000"/>
   </appSettings>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebLocation-20180528021530.mdf;Initial Catalog=aspnet-WebLocation-20180528021530;Integrated Security=True" providerName="System.Data.SqlClient" />
