--- a/Service/LocationWCF/app.config
+++ b/Service/LocationWCF/app.config
@@ -10,6 +10,11 @@
         <behavior name="">
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
           <serviceDebug includeExceptionDetailInFaults="false" />
+          <serviceThrottling  
+              maxConcurrentCalls ="1000"
+              maxConcurrentSessions ="1000"
+              maxConcurrentInstances ="1000"
+          />
         </behavior>
       </serviceBehaviors>
     </behaviors>
