--- a/Server/WCFServer/LocationWCF/App.config
+++ b/Server/WCFServer/LocationWCF/App.config
@@ -29,11 +29,12 @@
     <add key="Password" value="admin" />
     <add key="PositionMoveStateWaitTime" value="4.0" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
-    <add key="VersionCode" value="1.0.20" />
-    <add key="LocationPackageURL" value="http://192.168.1.21:8013/Setup/LocationSystem.exe" />
-    <add key="MaxConcurrentCalls" value="1000"/>
-    <add key="MaxConcurrentSessions" value="1000"/>
-    <add key="MaxConcurrentInstances" value="1000"/>
+    <add key="VersionCode" value="1.0.22" />
+    <add key="LocationPackageURL" value="http://localhost:53506/Exe/LocationSystem.exe" />
+    <add key="MaxConcurrentCalls" value="4000" />
+    <add key="MaxConcurrentSessions" value="4000" />
+    <add key="MaxConcurrentInstances" value="4000" />
+    <add key="DatacaseWebApiUrl" value="172.16.100.22" />
   </appSettings>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebLocation-20180528021530.mdf;Initial Catalog=aspnet-WebLocation-20180528021530;Integrated Security=True" providerName="System.Data.SqlClient" />
@@ -157,6 +158,7 @@
   </log4net>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <probing privatePath="Assemblies;Assemblies/System;Assemblies/Microsoft;Assemblies/SQLite" />
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="11.0.0.0" />
