--- a/Server/WCFServer/LocationWCF/Location.Server.csproj
+++ b/Server/WCFServer/LocationWCF/Location.Server.csproj
@@ -221,8 +221,11 @@
       <DependentUpon>PointSelectWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Tools\ConfigurationHelper.cs" />
+    <Compile Include="Tools\DepartmentsBackupHelper.cs" />
     <Compile Include="Tools\DevBackupHelper.cs" />
+    <Compile Include="Tools\EntranceGuardCardBackupHelper.cs.cs" />
     <Compile Include="Tools\ImageHelper.cs" />
+    <Compile Include="Tools\PersonBackupHelper.cs" />
     <Compile Include="Windows\AnchorCheckWindow.xaml.cs">
       <DependentUpon>AnchorCheckWindow.xaml</DependentUpon>
     </Compile>
@@ -489,10 +492,25 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Resource Include="Data\部门人员门禁卡信息\BackupPersonnelInfo.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Data\部门人员门禁卡信息\BackupEntranceGuardCardInfo.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <None Include="Data\部门人员门禁卡信息\BackupDepartmentsInfo.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="Data\EDOS.xls">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="Data\EDOSOriginalCode.xls">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Data\EDOS_New.xls">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Data\UDPoints20190321.xlsx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="UnitySetting.XML">
