--- a/Service/LocationWCF/Location.Service.csproj
+++ b/Service/LocationWCF/Location.Service.csproj
@@ -106,17 +106,19 @@
     <Compile Include="Locations\Interfaces\IWorkService.cs" />
     <Compile Include="Locations\LocationService.cs" />
     <Compile Include="Locations\LocationService_Area.cs" />
+    <Compile Include="Locations\LocationService_Department.cs" />
     <Compile Include="Locations\LocationService_Dev.cs" />
     <Compile Include="Locations\LocationService_BaseData.cs" />
     <Compile Include="Locations\LocationService_InitDb.cs" />
     <Compile Include="Locations\LocationService_Manage.cs" />
     <Compile Include="Locations\LocationService_Person.cs" />
     <Compile Include="Locations\LocationService_ConfigArg.cs" />
+    <Compile Include="Locations\LocationService_Post.cs" />
     <Compile Include="Locations\Services\AchorService.cs" />
     <Compile Include="Locations\Services\IEntityService.cs" />
     <Compile Include="Locations\Services\LocationAlarmService.cs" />
-    <Compile Include="Locations\Services\AreaAuthorizationRecordService.cs" />
-    <Compile Include="Locations\Services\AreaAuthorizationService.cs" />
+    <Compile Include="Locations\Services\SimpleSerivces\AreaAuthorizationRecordService.cs" />
+    <Compile Include="Locations\Services\SimpleSerivces\AreaAuthorizationService.cs" />
     <Compile Include="Locations\Services\AreaService.cs" />
     <Compile Include="Locations\Services\DepartmentService.cs" />
     <Compile Include="Locations\Services\DeviceService.cs" />
@@ -125,7 +127,8 @@
     <Compile Include="Locations\Services\PosHistoryService.cs" />
     <Compile Include="Locations\Services\PosService.cs" />
     <Compile Include="Locations\Services\PersonService.cs" />
-    <Compile Include="Locations\Services\TagRoleService.cs" />
+    <Compile Include="Locations\Services\SimpleSerivces\PostService.cs" />
+    <Compile Include="Locations\Services\SimpleSerivces\TagRoleService.cs" />
     <Compile Include="Locations\Services\TagService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceHostHelper.cs" />
@@ -179,6 +182,10 @@
     <ProjectReference Include="..\..\WebApi\WebApiLib\WebApiClients.csproj">
       <Project>{78dc1103-e23b-423a-a1b3-f7022934dd1c}</Project>
       <Name>WebApiClients</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\WebApi\WebNSQLib\WebNSQLib.csproj">
+      <Project>{13ccc157-451b-4249-bd65-a4db04a5c143}</Project>
+      <Name>WebNSQLib</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup />
