--- a/Model/TModel/TModel.csproj
+++ b/Model/TModel/TModel.csproj
@@ -44,7 +44,7 @@
   <ItemGroup>
     <Compile Include="BaseData\EntityList.cs" />
     <Compile Include="BaseData\Page.cs" />
-    <Compile Include="BaseData\ReturnInfo.cs" />
+    <Compile Include="BaseData\Result.cs" />
     <Compile Include="BaseData\Ticket.cs" />
     <Compile Include="ConvertCodes\ByNameAttribute.cs" />
     <Compile Include="ConvertCodes\ConvertCodeGenerator.cs" />
