自动连接定位引擎

--- a/Server/WCFServer/LocationWCF/App.config
+++ b/Server/WCFServer/LocationWCF/App.config
@@ -38,6 +38,8 @@
     <add key="DatacaseWebApiUrl" value="172.16.100.22" />
     <add key="CardRoleId" value="3" />
     <add key="ParkName" value="四会热电厂" />
+    <add key="EngineIp" value="172.16.100.25"/>
+    <add key="AutoConnectEngine" value="True"/>
   </appSettings>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebLocation-20180528021530.mdf;Initial Catalog=aspnet-WebLocation-20180528021530;Integrated Security=True" providerName="System.Data.SqlClient" />
