--- a/Server/WCFServer/LocationWCF/App.config
+++ b/Server/WCFServer/LocationWCF/App.config
@@ -14,15 +14,15 @@
     <!--自动启动服务 0:启动 1:不启动-->
     <add key="AutoStartServer" value="0" />
     <!--自动连接定位引擎-->
-    <add key="AutoConnectEngine" value="True"/>
+    <add key="AutoConnectEngine" value="True" />
     <!--本地IP(连接定位引擎)-->
     <add key="Ip" value="172.16.100.26" />
     <!--定位引擎IP(连接定位引擎)-->
-    <add key="EngineIp" value="172.16.100.25"/>
+    <add key="EngineIp" value="172.16.100.25" />
     <!--三维更新安装包路径-->
     <add key="LocationPackageURL" value="http://172.16.100.26/Exe/LocationSystem.exe" />
     <!--基础平台对接IP 测试用ipms-demo.datacase.io，正式用172.16.100.22，本地模拟用 simulate -->
-    <add key="DatacaseWebApiUrl" value="172.16.100.22" />
+    <add key="DatacaseWebApiUrl" value="simulate" />
 
     <!--NSQ配置信息-->
     <add key="NsqLookupdUrl" value="172.16.100.22:4161" />
@@ -30,7 +30,7 @@
     <add key="NsqLookupdChannel" value="channel-name" />
 
     <!--获取移动巡检数据（进行对接）-->
-    <add key="EnableInspectionTrack" value="True"/>
+    <add key="EnableInspectionTrack" value="True" />
     <!--数据初始化方式 -1:不初始化,0:EF,1:Sql-->
     <add key="DataInitMode" value="-1" />
     <!--数据库来源 0:SqlServer 1:SQLite 2:MySql-->
