--- a/DAL/DAL/packages.config
+++ b/DAL/DAL/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
+  <package id="log4net" version="2.0.8" targetFramework="net45" />
   <package id="MySql.Data" version="6.9.12" targetFramework="net45" />
   <package id="MySql.Data.Entity" version="6.9.12" targetFramework="net45" />
   <package id="SQLite.CodeFirst" version="1.5.1.25" targetFramework="net45" />
