--- a/Server/WCFServer/LocationWCF/Location.Server.csproj
+++ b/Server/WCFServer/LocationWCF/Location.Server.csproj
@@ -220,6 +220,8 @@
     <Compile Include="Models\EngineTool\PointSelectWindow.xaml.cs">
       <DependentUpon>PointSelectWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Tools\BaseDataInitializer.cs" />
+    <Compile Include="Tools\BaseDataSimulator.cs" />
     <Compile Include="Tools\ConfigurationHelper.cs" />
     <Compile Include="Tools\DepartmentsBackupHelper.cs" />
     <Compile Include="Tools\DevBackupHelper.cs" />
@@ -227,6 +229,7 @@
     <Compile Include="Tools\ImageHelper.cs" />
     <Compile Include="Tools\MyHttpListener.cs" />
     <Compile Include="Tools\PersonBackupHelper.cs" />
+    <Compile Include="Tools\Worker.cs" />
     <Compile Include="Windows\AnchorCheckWindow.xaml.cs">
       <DependentUpon>AnchorCheckWindow.xaml</DependentUpon>
     </Compile>
@@ -514,6 +517,27 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="Data\BaseData\cards.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Data\BaseData\devices.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Data\BaseData\events.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Data\BaseData\orgs.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Data\BaseData\results.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Data\BaseData\users.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Data\BaseData\zones.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="Data\定位终端人员卡号.xlsx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
